fmf/src/App.css
:root {
  --app-header-color: #282c34;
  --button-color: white;
  --menu-color: #5838B4;
  --text-color: #5838B4;
  --navmenu-btn-color: black;
  --navmenu-icon-color: purple;
  --navmenu-item-color: white;
  --small-link-btn-color: white;
  --footer-background: rgb(220, 235, 255);
  --app-link-color: #5838B4;
  --home-div-bg-color: white;
  --nav-menu-btn-color: rgb(10,25,41);
  --big-title-text: white;
  --small-title-text: orange;
}

.App {
  text-align: center;
  display: flex;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: var(--app-header-color);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: var(--app-link-color);
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}


.menuButton {
  width: 48%;
  background: var(--button-color);
  color: var(--text-color);
  font-weight: bold;
  font-size: 15px;
  padding: 15px;
  margin: 1%;
  border-radius: 20%;
  border: 3px solid var(--border-color);
  text-align: center;
}

.randomChooseButton {
  width: 30%;
  background: var(--border-color);
  color: var(--text-color);
  font-weight: bold;
  font-size: 50px;
  padding: 15px;
  margin-left: 35%;
  margin-top: 10px;
  margin-bottom: 10px;
  border-radius: 20%;
  border: 3px solid var(--border-color);
  text-align: center;
}

.menuContainer {
  width: 80%;
  margin-left: 10%;
  /* display: flex; */
  /* align-items: center; */
  /* justify-content:center; */
  /* background-color: rgb(226, 194, 255); */
  background-color: var(--menu-color);
  /* background-color: var(-menu-color); */
  border: 5px solid var(--border-color);
  border-radius: 10%;
  padding: 10px;
}

.switchButton {
  width: 90%;
  /* margin: auto; */
  color: var(--text-color);
  margin-left: 5%;
  /* margin-top: 10px; */
  margin-bottom: 1%;
  /* height: 30px; */
  /* color: rgb(0, 0, 0); */
  border-radius: 10%;
  border: 3px solid var(--border-color);
  background: var(--button-color);
  font-size: 15px;
  font-weight: 700;
}

.navbarLabel {
  font-size: 80px;
  text-align: center;
  
  font-weight: 700;
}

.navbarButton {
  font-size: large;
  font-weight: 700;
}


.navcolor {
  background: var(--border-color);
  margin-bottom: 2%;
}

.footertype {
  background: var(--footer-background);
  bottom: 0;
  /* padding-top: 1px; */
  /* margin-top: 100px; */
}

.homediv {
  background-color: var(--home-div-bg-color);
}

.switchdiv {
  margin-top: 5%;
  margin-bottom: 5%;
  margin-left: 20%;
  padding: 20px 5% 10px 5%;
  width: 60%;
  height: 20%;
  background-color: var(--menu-color);
  border: 5px solid var(--border-color);
  /* border: 2px solid rgb(201, 201, 255); */
  border-radius: 10%;
  font-family: 'Courier New', Courier, monospace;
  font-size: 10px;
  font-weight: 700;
}

p {
  line-height: 1px;
}

.menuHeader {
  font-size: 25px;
  text-align: center;
  font-weight: 700;
}

.childcareimage {
  width: 80%;
  margin-top: 20px;
  margin-bottom: 20px;
  display: block;
}

.childcareTopDiv {
  width: 90%;
  margin-left: 5%;
  text-align: center;
  padding: 10px;
  /* height: 100px; */
  border-radius: 10%;
  border: 2px solid var(--border-color);
}
/*
.aboutdiv {
  padding: 20px;
  width: 90%;
  margin-left: 5%;
  background-color: var(--menu-color);
  border-radius: 10%;
}
*/
/* CSS */
.aboutdiv {
  align-items: center;
  background-color: #FFFFFF;
  border: 2px solid rgba(0, 0, 0, 0.1);
  border-radius: .25rem;
  box-shadow: rgba(0, 0, 0, 0.02) 0 3px 3px 0;
  box-sizing: border-box;
  color: rgba(0, 0, 0, 0.85);
  cursor: pointer;
  display: block;
  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
  font-weight: 600;
  justify-content: center;
  height: 200px;
  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
  position: relative;
  text-decoration: none;
  text-align: center;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: baseline;
  width: 80%;
}

.inputfield {
  width: 90%;
  margin-left: 5%;
  border-radius: 10%;
  margin-bottom: 10px;
  margin-top: 5px;
  padding: 8px;
  font-size: 15px;
}

.biggerfont {
  font-size: 15px;
}

.loginbutton {
  font-size: 20px;
  padding: 10px;
}

.centeronly {
  text-align: center;
  width: 50%;
  margin-left: auto;
  margin-right: auto;
}

img {
  width: 80%;
  margin-left: 10%;
  border: 5px solid var(--border-color);
  margin: 20px;
}

.loginnotice {
  color: red;
  text-align: center;
  width: 80%;
  margin-left: 10%;
  opacity: 0.8;
}

.infonotice {
  color: blue;
  text-align: center;
  width: 80%;
  margin-left: 10%;
  opacity: 0.8;
}

.seatdiv {
  width: 100px;
  height: 100px;
  background-color: red;
  font-size: 10px;
  border-radius: 10%;
  padding: 10px;
  margin: 5px;
}

.doubleseatdiv {
  font-size: 10px;
  background-color: red;
  margin: 5px;
  width: 200px;
  padding: 10px;
  border-radius: 10%;
  height: 100px;
}

.selectedPriceLevel {
  background-color: rgb(255, 255, 0);
}



.navmenu {
  width: 250px;
  transition: width 0.3s ease-in-out;
  height: 100vh;
  background-color: var(--navmenu-btn-color);
  padding-top: 28px;
}

.navmenuClosed {
  composes: sidenav;
  transition: width 0.3s ease-in-out;
  width: 60px
}

.navItem {
  display: flex;
  align-items: center;
  padding: 10px 20px;
  cursor: pointer;
  color: var(--navmenu-item-color);
  text-decoration: none;
}

.linkText {
  padding-left: 16px;
}

.linkTextClosed {
  composes: linkText;
  visibility: hidden;
}

.navItem:hover {
  background-color: #244f7d1c;
}

.navMenuButton {
  align-self: center;
  align-self: flex-start;
  justify-self: flex-end;
  color: var(--navmenu-btn-color);
  background-color: transparent;
  border: none;
  cursor: pointer;
  padding-left: 20px;
}

body {
  margin: 0;
  padding: 0;
}

navmain {
  padding: 10px;
}

.astext {
  background: none;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.smallLinkButton {
  color: var(--small-link-btn-color);
  align-content: center;
  width: 50%;
  margin-left: 25%;
}

.loginInput {
  text-align: left;
  width: 400px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 3%;
  padding: 8px;
  font-size: 15px;
}

.priceItem {
  border: 3px solid var(--border-color);
  padding: 10px;
  width: 20%;
  margin-left: 10%;
  display:inline;
  font-size: 20px;
}

.bigTitleText {
  font-size: 80px;
  color: var(--big-title-text);
  font-weight: 700;
}

.smallTitleText {
  font-size: 40px;
  font-weight: 700;
  color: var(--small-title-text);
}

.mainTitleMenu {
  background-color: #5838B4;
  top: 0;
}

.navmenu-icon {
  font-size: 30px;
  padding: 5px;
  border: 2px solid var(--border-color);
  width: 50px;
}


/* CSS */
.button-google {
  align-items: center;
  appearance: none;
  background-color: #fff;
  border-radius: 24px;
  border-style: none;
  box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
  box-sizing: border-box;
  color: #3c4043;
  cursor: pointer;
  display: block;
  fill: currentcolor;
  font-family: "Google Sans",Roboto,Arial,sans-serif;
  font-size: 14px;
  font-weight: 500;
  height: 48px;
  justify-content: center;
  letter-spacing: .25px;
  line-height: normal;
  max-width: 100%;
  overflow: visible;
  margin-left:auto;
  margin-right:auto;
  padding: 2px 24px;
  position: relative;
  text-align: center;
  text-transform: none;
  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  width: 250px;
  will-change: transform,opacity;
  z-index: 0;
}

.button-google:hover {
  background: #F6F9FE;
  color: #174ea6;
}

.button-google:active {
  box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
  outline: none;
}

.button-google:focus {
  outline: none;
  border: 2px solid #4285f4;
}

.button-google:not(:disabled) {
  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
}

.button-google:not(:disabled):hover {
  box-shadow: rgba(60, 64, 67, .3) 0 2px 3px 0, rgba(60, 64, 67, .15) 0 6px 10px 4px;
}

.button-google:not(:disabled):focus {
  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
}

.button-google:not(:disabled):active {
  box-shadow: rgba(60, 64, 67, .3) 0 4px 4px 0, rgba(60, 64, 67, .15) 0 8px 12px 6px;
}

.button-google:disabled {
  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
}

.footer-css {
  background-color: rgba(0, 0, 0, 0.05);
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  color: white;
  text-align: center;
}

